# ppocrv6-cli

./: .gitignore  pyproject.toml
ppocrv6_cli/: cli.py  downloader.py  engine.py  formatter.py  ppocrv6_onnx.py
tests/: test_cli.py
