[project]
name = "ppocrv6-cli"
version = "0.1.0"
description = "Agent-friendly CLI for PP-OCRv6 text detection & recognition (ONNX Runtime)"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "onnxruntime>=1.20",
    "opencv-python-headless>=4.5",
    "numpy>=1.21",
    "pyclipper>=1.3",
]

[project.optional-dependencies]
table = ["rich>=13.0"]
cuda = ["onnxruntime-gpu>=1.20"]
coreml = ["onnxruntime-coreml"]

[project.scripts]
ppocrv6 = "ppocrv6_cli.cli:main"

[project.urls]
Repository = "https://github.com/AIwork4me/ppocrv6_onnx"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
